# libvspp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  Makefile  README.md  build.js  llparse.js  package-lock.json  package.json  xmake.lua
example/: keyvalue.cpp  keyvalue.txt  multipart.cpp  multipart.txt  multipart_raw.cpp  parse_file.hpp  url.cpp
include/: vspp.hpp
include/vspp/: basic_reader.hpp
include/vspp/keyvalue/: basic_parser.hpp  delimiter.hpp
include/vspp/multipart/: basic_parser.hpp  parse.hpp
src/: basic_file_reader.hpp  basic_handler.hpp  builder.js  keyvalue.cpp  keyvalue.hpp  keyvalue_parser.c  keyvalue_parser.cpp  keyvalue_parser.hpp  multipart.cpp  multipart.hpp  multipart.js  multipart_parser.cpp  multipart_parser.hpp  parser.hpp  reader.hpp  span_end.hpp  span_start.hpp  toml.c  toml.cpp  toml.h  toml.hpp  toml.mjs  vsp.hpp  vspp.hpp
src/concept/: entry_container.hpp  string_container.hpp
src/keyvalue/: basic_parser.hpp  delimiter.hpp  keyvalue.c  keyvalue.cpp  keyvalue.h  keyvalue.hpp  keyvalue_core.h  keyvalue_parser.h  parse.hpp
src/multipart/: basic_parser.hpp  multipart.cpp  multipart.hpp  multipart.js  parse.hpp  parser.js.bak
src/toml/: backup.bak  parser.mjs  test.cpp  toml.cpp  toml.hpp  toml.js  toml_core.js  toml_string.js
src/url/: basic_parser.hpp  url_parser.cpp  url_parser.hpp
src/yaml/: yaml.js  yaml_core.js  yaml_string.js
test/: keyvalue.cpp  keyvalue_raw.cpp  multipart.cpp  multipart.txt  multipart_raw.cpp  parse_file.hpp  toml  toml.cpp  toml.txt
